Add screenshot previews. Clicking a game's screenshot will now show it in a fullscreen "preview". Clicking the "preview" will hide it.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -237,6 +237,27 @@ body {
   user-select: none;
 }
 
+/* ------ Image Preview ------ */
+.image-preview {
+  /* Fill entire screen */
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  /* Pimp */
+  padding: 2rem;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.image-preview__inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 
 /* ------ Main Layout ------ */
 .root {
