Make screenshot preview zoomable. By default the screenshot preview will now show the image in its original size or scale it down if it doesnt fit (but not scale it up). The image will be scaled up if you click it, and clicking it again will revert back to the normal scale mode (the cursor will switch icon to indicate this).
Also, the cursor will be shown as the "zoom in" icon when hovering over the screenshot in the sidebar (to indicate that clicking it will preview it).

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -249,13 +249,18 @@ body {
   padding: 2rem;
   background-color: rgba(0, 0, 0, 0.8);
 }
-.image-preview__inner {
-  position: relative;
+.image-preview * {
+  user-select: none;
+}
+.image-preview__border {
   width: 100%;
   height: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+}
+.image-preview__image--fill {
+  cursor: zoom-out;
+}
+.image-preview__image--fit {
+  cursor: zoom-in;
 }
 
 
@@ -867,6 +872,7 @@ body {
 }
 .browse-right-sidebar__row__screenshot {
   width: 100%;
+  cursor: zoom-in;
 }
 .browse-right-sidebar__row__spacer {
   flex: 1 0 auto;
