Add "New Game" button that creates a new "temporary" game when clicked. This games is only accessible in the right sidebar until it is saved, at which point it will be added to the appropriate platform and the platform will then be saved.
Add a new prop/state "wasNewGameClicked", which is a boolean thats passed from the footer up to the app root then down to the browser.
This is kind of silly, but it works.

Move state "hasChanged" up from RightBrowseSidebar to BrowsePage.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -508,6 +508,10 @@ body {
 .footer__game-count {
   cursor: default;
 }
+/* Scale New-Game */
+.footer__new-game {
+  font-size: 0.8rem;
+}
 /* Layout Selector */
 .footer__layout-selector {
   display: inline-block;
