Add a "Random Games" box that displays six randomly picked games (all games are unique, the "show extreme" preference is applied and double clicking a game will launch it). Add the ConnectedHomePage container. It lets the HomePage access the preferences. Add SizeProvider. Its a "div" element with "--width" and "--height" css variables set after its width and height props.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -593,8 +593,27 @@ body {
   overflow: auto;
 }
 .home-page__inner {
-  min-width: 30em;
+  min-width: 40em;
   overflow: visible;
+}
+.home-page__random-games {
+  text-align: center;
+}
+.home-page__random-games__inner {
+  display: inline-block;
+  margin: 0 auto;
+}
+.home-page__random-games__title {
+  margin: 0.2em 0;
+font-size: 1.2em;
+font-weight: bold;
+}
+.home-page__random-games__games {
+  display: flex;
+}
+.home-page__random-games__loading {
+  display: block;
+  text-align: center;
 }
 
 
