--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -606,12 +606,25 @@ body {
   /* Keep the mask's aspect ratio */
   width: var(--size);
   height: calc(var(--size) * 0.9);
+}
+.home-page__logo__image {
+  --zoom: 1800%;
+  width: 100%;
+  height: 100%;
   /* Mask the background color with the FP logo */
-  -webkit-mask: url('../images/logo-solid.svg');
+    -webkit-mask: url('../images/logo-solid.svg');
   -webkit-mask-size: var(--size);
   -webkit-mask-repeat: no-repeat;
   /* Cool colors yall */
-  background-image: linear-gradient(red, yellow);
+  background:
+    linear-gradient(#00000000, var(--theme__background-color)),
+    linear-gradient(90deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #ff2400);
+  background-size: var(--zoom) 100%;
+  -webkit-animation: home-page__logo__slide 1200s linear infinite;
+}
+@-webkit-keyframes home-page__logo__slide {
+     0% { background-position-x:          0%; }
+   100% { background-position-x: var(--zoom); }
 }
 /* Quick Start*/
 .home-page__quick-start {
