Make clikcing the label of the check boxes in the right sidebar also toggle the check box (this is way more intuitive). Double clicking the buttons in the top-right of the right sidebar no longer selects the "by" text close to it.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -908,6 +908,7 @@ font-weight: bold;
   flex: 0 0 auto;
   display: flex;
   margin-left: 0.3rem;
+  user-select: none;
 }
 .browse-right-sidebar__title-row__buttons > *:not(:first-child) {
   margin-left: 0.6rem;
@@ -949,6 +950,9 @@ font-weight: bold;
   fill: #5cb468;
 }
 /* Browse-Right-Sidebar Row - Sub Elements */
+.browse-right-sidebar__row__check-box-wrapper {
+  display: contents;
+}
 .browse-right-sidebar__row__check-box {
   vertical-align: middle;
 }
