--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -779,7 +779,8 @@ font-weight: bold;
 .log__source--router {
   color: #00ff00;
 }
-.log__source--redirector {
+.log__source--redirector,
+.log__source--fiddler {
   color: #00ffff;
 }
 
