fix: stop game-grid-item titles from extending beyond the bottom border
Explicitly setting the line-height makes the height the same no matter
what characters are used in the title.
The line-height is similar to the current height for most titles.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -1265,6 +1265,7 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: calc((16 / 188) * var(--height) * 1px);
+  line-height: 1.2;
   /* Pimp */
   font-weight: bold;
   user-select: none;
