--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -247,6 +247,69 @@ body {
 .checkbox-dropdown__content label:hover {
   background-color: #1e90ff;
 }
+/* Input Dropdown */
+.input-dropdown {
+  position: relative;
+  /* Pimp */
+  font-family: var(--theme__font-family);
+  background-color: var(--theme__background-color);
+  color: var(--theme__text-color);
+}
+.input-dropdown__input-field {
+  position: relative;
+  display: flex;
+  width: 100%;
+  /*padding: 0 0.1rem;*/
+}
+.input-dropdown__input-field__back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  user-select: none;
+  cursor: default;
+  /* Pimp */
+  appearance: menulist-button;
+  -webkit-appearance: menulist-button;
+  background-color: #313131;
+  color: var(--theme__text-color);
+  border: none;
+}
+.input-dropdown__input-field__input {
+  position: relative;
+  flex: 1 1 auto;
+}
+.input-dropdown__input-field__input__inner {
+  background: none;
+}
+.input-dropdown__input-field__button {
+  position: relative;
+  width: 1.25em;
+  flex: 0 0 auto;
+  cursor: pointer;
+}
+.input-dropdown__content {
+  width: 100%;
+  display: block;
+  position: absolute;
+  /* Pimp */
+  background-color: #313131;
+  color: var(--theme__text-color);
+  border: 1px solid var(--theme__search-bar__outline-color);
+}
+.input-dropdown__content--hidden {
+  display: none;
+}
+.input-dropdown__content label {
+  display: flex;
+}
+.input-dropdown__content label p {
+  display: inline-block;
+  overflow: hidden;
+}
+.input-dropdown__content label:hover,
+.input-dropdown__content label:focus {
+  background-color: #1e90ff;
+}
 
 
 /* ------ Search & SearchTag Components ------ */
@@ -980,6 +1043,9 @@ body {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+}
+.browse-right-sidebar__row--one-line > .input-dropdown {
+  width: 100%;
 }
 .browse-right-sidebar__row--additional-applications-header > :not(:first-child) {
   float: right;
