feat: add "Check Images" tool to developer page (& some other stuff)
The other stuff includes (but is not limited to):
1. Creating a new component "SimpleButton", which is just an <input>
element with some minor changes.
2. Add "Omit" type to "shard/interfaces"
3. Move log related stuff in the CSS

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -313,6 +313,32 @@ body {
 .input-dropdown__content label:focus {
   background-color: #1e90ff;
 }
+/* Log */
+.log {
+  height: 100%;
+  overflow: scroll;
+  /* Pimp */
+  color: white;
+}
+.log__time-stamp {
+  color: #857df3;
+}
+.log__source {
+  /* Default color of sources, used on the unknown/unspecified sources */
+  color: #d4d4d4;
+}
+.log__source--background-services {
+  color: #8d8d8d;
+}
+.log__source--game-launcher {
+  color: #ffd900;
+}
+.log__source--router {
+  color: #00ff00;
+}
+.log__source--redirector {
+  color: #00ffff;
+}
 
 
 /* ------ Search & SearchTag Components ------ */
@@ -926,32 +952,6 @@ body {
 /* Log-Page Content */
 .log-page__content {
   flex: 1 1 auto;
-}
-/* Log */
-.log {
-  height: 100%;
-  overflow: scroll;
-  /* Pimp */
-  color: white;
-}
-.log__time-stamp {
-  color: #857df3;
-}
-.log__source {
-  /* Default color of sources, used on the unknown/unspecified sources */
-  color: #d4d4d4;
-}
-.log__source--background-services {
-  color: #8d8d8d;
-}
-.log__source--game-launcher {
-  color: #ffd900;
-}
-.log__source--router {
-  color: #00ff00;
-}
-.log__source--redirector {
-  color: #00ffff;
 }
 
 
@@ -1654,6 +1654,14 @@ body {
 }
 .developer-page__title {
   font-size: 2.5em;
+}
+.developer-page__content {
+  flex: 1 1 auto;
+  height: 20rem;
+  background-color: #313133;
+  border: 1px #353535 solid;
+  border-radius: 0.5rem;
+  text-align: left;
 }
 
 /** ------ Config ------ */
